--- a/config/database.yml
+++ b/config/database.yml
@@ -63,7 +63,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: sec_app_db_test
+  #database: sec_app_db_test
+  url: <%= ENV['DATABASE_URL']  %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
