--- a/config/database.yml
+++ b/config/database.yml
@@ -24,6 +24,7 @@ default: &default
 development:
   <<: *default
   #database: sec_app_db
+  port: 5432
   url: <%= ENV['DATABASE_URL']  %>
 
   # The specified database role being used to connect to postgres.
