--- a/config/database.yml
+++ b/config/database.yml
@@ -25,7 +25,7 @@ development:
   <<: *default
   #database: sec_app_db
   port: 5432
-  url: <%= ENV['DATABASE_URL']  %>
+  url: <%= ENV['HEROKU_POSTGRESQL_OLIVE_URL']  %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
