--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
-  <<: *default
+  #<<: *default
   #database: sec_app_db
   url: <%= ENV['DATABASE_URL'] %>
 
