[modify] DB設定をherokuからローカルのDockerに戻した。

--- a/config/database.yml
+++ b/config/database.yml
@@ -22,9 +22,12 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
-  #<<: *default
-  #database: sec_app_db
-  url: <%= ENV['DATABASE_URL'] %>
+  <<: *default
+  database: sec_app_db
+  username: sec_op
+  password: ka141913
+  host: 127.0.0.1
+  port: 5432
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
