--- a/config/database.yml
+++ b/config/database.yml
@@ -62,7 +62,7 @@ development:
 test:
   <<: *default
   database: sec_app_db_test
-  username: sec_op
+  username: postgres
   password: ka141913
   host: 127.0.0.1
   port: 5432
