[modify] 本番用にDB設定を行った。
本番用の設定を行った。

--- a/config/database.yml
+++ b/config/database.yml
@@ -88,4 +88,8 @@ test:
 #
 production:
   <<: *default
-  database: sec_op
+  database: sec_app_db
+  username: sec_op
+  password: ka141913
+  host: 192.168.100.1
+  port: 5432
